--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -71,10 +71,12 @@ h1 {
 
 .portrait-title h2 {
   color: #333;
+  direction: rtl;
 }
 
 #about .col-12.col-lg-8 {
   padding-top: 30px !important;
+  direction: rtl;
 }
 
 .network-icon li:hover {
@@ -102,6 +104,7 @@ h1 {
   margin-bottom: 1rem;
   text-transform: uppercase;
   letter-spacing: .08em;
+  direction: rtl;
 }
 
 /* make dark even/odd sections same color so less stripey */
@@ -121,6 +124,7 @@ pre {
   background: #fff;
   overflow-x: auto;
   border-radius: 0px; /*undo rounded corners*/
+  
 }
 
 pre code { 
@@ -132,6 +136,7 @@ code {
   color: #d33682;
   background: #fff;
   font-size: 0.9em;
+
 }
 
 .hljs {
@@ -299,6 +304,7 @@ iframe {
 
 .dark .page-link:hover {
 	background-color: #6096BA;
+
 }
 
 .dark a:active, 
@@ -309,4 +315,5 @@ iframe {
 
 h3.article-title i.fab {
 	color: #6096BA;
+  direction: rtl;
 }
